[tool.poetry]
name = "data-ai-template"
version = "1.0.0"
description = "A Template for Data AI Projects"
authors = ["Datafy Associates <info@datafyassociates.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.38.0"
langchain-anthropic = "^0.1.23"
duckduckgo-search = "^6.2.11"
langchain-exa = "^0.1.0"
streamlit-audiorecorder = "^0.0.4"
jupyterlab = "^4.2.5"
plotly = "^5.20.0"
ipywidgets = ">=7.0.0,<8"
langchain-community = "^0.2.16"
googlemaps = "^4.10.0"
google-search-results= "^2.4.2"
matplotlib = "^3.9.2"
loguru = "^0.7.2"
jsons = "^1.6.3"
leafmap = "^0.37.1"
llama-index = "0.11.15"
llama-index-embeddings-openai = "0.2.4"
llama-index-llms-openai = "0.2.2"
llama-index-vector-stores-qdrant = "0.3.0"
langchain-experimental = "^0.0.57"
langchain-openai = "^0.1.23"
toml = "^0.10.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
